<resources>
    <!-- Global -->
    <string name="app_name">Prof Lama</string>

    <!-- Main screen -->
    <string name="mainScreenTitle">Prof Lama</string>
    <string name="menuItemAll">Dictionary</string>
    <string name="menuItemTraining">Quiz</string>

    <!-- Add and update -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="word">Word</string>
    <string name="definition">Definition</string>
    <string name="quote">Quote</string>

    <!-- Add word -->
    <string name="addDialogTitle">New word</string>

    <!-- Update dialog -->
    <string name="updateDialogTitle">Edit your word</string>
    <string name="updateDialogDelete">Delete</string>

    <!-- Notifications -->
    <string name="pushNotificationNewTitleContent">New word added: </string>
    <string name="weeklyNotificationContent">Well done! You learned %d new words this week =D</string>
    <string name="weeklyNotificationContentWhenNoWordAdded">You haven\'t learned new words this week :(</string>

    <!-- Tutorial -->
    <string name="tutorial1title">Tutorial 1 - Click here</string>
    <string name="tutorial1definition">This is a word. If you want to edit it, do a long press on this word.</string>
    <string name="tutorial1quote">Here you can edit all information about this word. You can edit the word, the definition or the quotation. Now close this one and open the second tutorial.</string>
    <string name="tutorial2title">Tutorial 2 - How to add a word?</string>
    <string name="tutorial2definition">Add a new word manually – click on the «+ » button to add a word you want to save. You can add the definition or quotations.</string>
    <string name="tutorial2quote">Add a new word from the Internet – do a long press on the word you want to save and simply add it to Prof Lama.Not sure on how to to this? You can also watch the video tutorial on the Google Play page of Prof Lama.</string>

    <!-- Menu option -->
    <string name="alphabetic_order">Order by title</string>
    <string name="historical_order">Order by creation date</string>

    <!-- Quiz -->
    <string name="result_success">You master these words: </string>
    <string name="result_failure">You need to practice more these words: </string>
    <string name="select_the_correct_definition">Select the correct definition</string>
    <string name="toaster_quizz_not_avaible">You need at least 10 complete words to unlock the quiz.</string>
</resources>
