<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/word"
        style="@style/EditTextCustom"/>

    <LinearLayout
        android:id="@+id/layout_button_switch_title_and_content"
        android:layout_below="@id/edit_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/button_switch_title_and_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:src="@drawable/switch_word_icon_24dp"
            android:contentDescription="switchArrow"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_button_switch_title_and_content"
        android:layout_alignParentStart="true"
        android:inputType="textMultiLine"
        android:hint="@string/definition"
        style="@style/EditTextCustom"
       />


    <LinearLayout
        android:id="@+id/layout_button_switch_content_and_quote"
        android:layout_below="@id/edit_definition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/button_switch_content_and_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:src="@drawable/switch_word_icon_24dp"
            android:contentDescription="switchArrow"/>
    </LinearLayout>


    <EditText
        android:id="@+id/edit_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_button_switch_content_and_quote"
        android:layout_alignParentStart="true"
        android:inputType="textMultiLine"
        android:hint="@string/quote"
        style="@style/EditTextCustom"
        />

    <LinearLayout
        android:id="@+id/actions_delete_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_quote"
        android:gravity="left"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/actions_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingTop="16dp"
            android:text="@string/updateDialogDelete"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_save_layout"
        android:layout_below="@id/edit_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/action_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingEnd="4dp"
            android:text="@string/save"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
             />
    </LinearLayout>

</RelativeLayout>